Added installation and configuration of devices and device groups. Implemented data collector bundle which accepts device information of devices from V3 and up, old device info is not handled and thus can not be shown.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,11 @@
+data_collector:
+    resource: "@DataCollectorBundle/Resources/config/routing.yml"
+    prefix:   /
+
+device:
+    resource: "@DeviceBundle/Resources/config/routing.yml"
+    prefix:   /
+
 store:
     resource: "@StoreBundle/Resources/config/routing.yml"
     prefix:   /
