--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -38,6 +38,7 @@ security:
 
     access_control:
         - {path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - {path: ^/data, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - {path: ^/tcm, roles: [ROLE_ADMIN, ROLE_SUPER_ADMIN, ROLE_VIP_USER, ROLE_USER] }
         - {path: ^/logout, role: IS_AUTHENTICATED_FULLY }
         - {path: ^/api, role: IS_AUTHENTICATED_FULLY }
