--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -4,15 +4,15 @@
 parameters:
     database_driver:    pdo_mysql
     database_host:      localhost
-    database_port:      8889
-    database_name:      tcm
-    database_user:      tcm_db
+    database_port:      3306
+    database_name:      phnctrl_tcm
+    database_user:      phnctrl_root
     database_password:  k6aRE4DthUPM8tf
 
     mailer_transport:   smtp
-    mailer_host:        127.0.0.1
-    mailer_user:        ~
-    mailer_password:    ~
+    mailer_host:        smtp.phnctrl.nl
+    mailer_user:        support@phnctrl.nl
+    mailer_password:    wdH9bEzb5WbcqnU
 
     # A secret key that's used to generate certain security-related tokens
     secret:             54e530f5cfb4acb828f9a3af700cdfd3d61b865d
