sendCredentialsEmail function moved to class_helper so only one occurance for sending credential email exists, added a .htaccess file for the root so this does not need to be created every time. App is now default production!

--- a/src/UserBundle/Resources/config/services.yml
+++ b/src/UserBundle/Resources/config/services.yml
@@ -5,4 +5,4 @@ services:
 
     class_helper:
         class: AppBundle\Services\ClassHelper
-        arguments: []
+        arguments: ['@service_container']
