--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -14,8 +14,13 @@ tcm_profile_change_password:
 
 tcm_data_collector:
     path:     /data/collector
-    methods:  [PUT, POST]
+    #methods:  [PUT, POST]
     defaults: { _controller: DataCollectorBundle:Data:collectData }
     options:
         expose: true
 
+tcm_data_collector_test:
+    path:     /data/collector/test
+    defaults: { _controller: DataCollectorBundle:Data:testPostData }
+    options:
+        expose: true
