--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -37,6 +37,7 @@ security:
                 target: /
 
     access_control:
+        - {path: ^/dashboard, role: IS_AUTHENTICATED_FULLY }
         - {path: ^/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - {path: ^/data, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - {path: ^/tcm, roles: [ROLE_ADMIN, ROLE_SUPER_ADMIN, ROLE_VIP_USER, ROLE_USER] }
