Changed font sizes so fits on all devices/types, added update function for update of sensor data, removed dev flag, so server always is production!

--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -34,6 +34,13 @@ tcm_store_show:
     defaults: { _controller: AppBundle:Page:showStore }
     options:
         expose: true
+
+tcm_update_sensors:
+    path:     /store/{storeid}/sensors/update
+    defaults: { _controller: AppBundle:Data:updateSensors }
+    options:
+        expose: true
+
 tcm_logout:
     path:     /logout
     options:
