--- a/src/UserBundle/Resources/config/routing.yml
+++ b/src/UserBundle/Resources/config/routing.yml
@@ -1,3 +1,10 @@
+# TCM splash
+tcm_splash:
+    path:     /
+    defaults: { _controller: AppBundle:Page:splash }
+    options:
+        expose: true
+
 tcm_login:
     path:     /login
     defaults: { _controller: UserBundle:Security:login }
