--- a/src/UserBundle/Resources/config/routing.yml
+++ b/src/UserBundle/Resources/config/routing.yml
@@ -18,10 +18,19 @@ tcm_login_status:
     options:
         expose: true
 
+tcm_profile_change_password:
+    path:     /profile/change/password
+    methods:  [POST]
+    defaults: { _controller: UserBundle:Security:changePassword }
+    options:
+        expose: true
+
 login_verify:
     path:   /login_verify
     options:
         expose: true
 
-logout:
+tcm_logout:
     path:   /logout
+    options:
+        expose: true
