--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -8,6 +8,7 @@ imports:
     - { resource: "@StoreBundle/Resources/config/services.yml" }
     - { resource: "@DeviceBundle/Resources/config/services.yml" }
     - { resource: "@DataCollectorBundle/Resources/config/services.yml" }
+    - { resource: "@NotificationBundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -31,6 +32,7 @@ framework:
     trusted_hosts:   ~
     trusted_proxies: ~
     session:
+        #cookie_lifetime: 3600
         # handler_id set to null will use default session handler from php.ini
         handler_id:  ~
     fragments:       ~
