Added notification handler and notification email template. Added contacts and notificants in store info overview. Added notification helper service.

--- a/src/AppBundle/Resources/config/services.yml
+++ b/src/AppBundle/Resources/config/services.yml
@@ -2,3 +2,7 @@ services:
    class_helper:
         class: AppBundle\Services\ClassHelper
         arguments: ['@service_container']
+
+   notification_helper:
+        class: NotificationBundle\Services\NotificationHelper
+        arguments: ['@service_container']
