--- a/src/UserBundle/Resources/config/services.yml
+++ b/src/UserBundle/Resources/config/services.yml
@@ -6,3 +6,7 @@ services:
     class_helper:
         class: AppBundle\Services\ClassHelper
         arguments: ['@service_container']
+
+    notification_helper:
+        class: NotificationBundle\Services\NotificationHelper
+        arguments: ['@service_container']
