Packet log implementation phase 1.

--- a/src/DataCollectorBundle/Resources/config/services.yml
+++ b/src/DataCollectorBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
-#    data_collector.example:
-#        class: DataCollectorBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+   collector_helper:
+        class: DataCollectorBundle\Services\CollectorHelper
+        arguments: ['@service_container']
