Collection attachment rotate image implemented. Collector log completed, now temperature's uid's and name's can be toggled in the main table view.

--- a/src/AdministrationBundle/Resources/config/routing.yml
+++ b/src/AdministrationBundle/Resources/config/routing.yml
@@ -401,7 +401,7 @@ administration_collection_upload:
         expose: true
 
 administration_collection_attachment_get:
-    path:     /collection/attachment/{attachmentid}/get
+    path:     /collection/attachment/{attachmentid}/get/{rand}
     defaults: { _controller: CollectionBundle:Data:getCollectionAttachment }
     methods: [GET]
     options:
