--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "require": {
         "php": ">=5.3.9",
-        "symfony/symfony": "2.8.*",
+        "symfony/symfony": "~3.0",
         "propel/propel-bundle": "~1.4",
         "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
