parameter dist file changed for auto maintenance off.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -20,3 +20,4 @@ parameters:
     domain_name:        phnctrl.nl
     logins:             3
     collection_path:    collectiondata
+    maintenance_auto_off: 7200
