Added paginated log pages, added extra view mode in log list, added stock pre-functionality.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -82,3 +82,4 @@ swiftmailer:
 usoft_postcode:
     apiwise:
         key: 'P4YtqxfDFNlgy3nOt1tE4IC3w1uUbiv35fhgMpg0'
+# additional key: 'm23R7oV6UM8aRvVpR35Vd3JHFUlaFzzV1Xmvs9S7'
